--- a/gcode_macro.cfg
+++ b/gcode_macro.cfg
@@ -15,6 +15,7 @@ variable_fan2_min: 180
 variable_fan2_speed: 0
 variable_hotend_temp: 0
 variable_e_min_current: 0.27
+variable_cam_off_temp: 60
 gcode:
 
 [gcode_macro AUTOTUNE_SHAPERS]
@@ -33,7 +34,6 @@ gcode:
 
 [gcode_macro LOAD_MATERIAL_RESTORE_FAN2]
 gcode:
-  { action_respond_info("...LOAD_MATERIAL_RESTORE_FAN2") } # tmp
   {% set fan2_value = printer['gcode_macro LOAD_MATERIAL_CLOSE_FAN2'].fan2_value|float %}
   RESTORE_GCODE_STATE NAME=myMoveState
   {% if fan2_value > 0.0 %}
@@ -68,11 +68,24 @@ gcode:
 [gcode_macro QUIT_MATERIAL]
 gcode:
   SAVE_GCODE_STATE NAME=myMoveState
+  RESTORE_E_CURRENT
   M109 S{printer.custom_macro.default_extruder_temp}
-  G91
-  G1 E20 F180
-  G1 E-30 F180
-  G1 E-50 F2000
+  M83
+  G1 E100 F300
+  G1 E-15 F3000
+  G1 E-22.4700 F2400
+  G1 E-6.4200 F1200
+  G1 E-3.2100 F720
+  G1 E5.0000 F356
+  G1 E-5.0000 F384
+  G1 E5.0000 F412
+  G1 E-5.0000 F440
+  G1 E5.0000 F467
+  G1 E-5.0000 F495
+  G1 E5.0000 F523
+  G1 E-5.0000 F3000
+  G1 E-15 F3000
+  SET_E_MIN_CURRENT
   RESTORE_GCODE_STATE NAME=myMoveState
 
 [gcode_macro Qmode]
@@ -290,13 +303,28 @@ gcode:
     {% endif %}
   {% else %}
     SET_PIN PIN=fan0 VALUE=0
+    SET_PIN PIN=fan1 VALUE=0
     SET_PIN PIN=fan2 VALUE=0
   {% endif %}
 
 #[gcode_macro M141]
 #description: Set Chamber temperature with slicers
 #gcode:
-#  SET_TEMPERATURE_FAN_TARGET TEMPERATURE_FAN=chamber_fan TARGET={params.S|default(35)}
+#  {% if 'S' in params|upper %}
+#    {% if printer["temperature_fan chamber_fan"].speed > 0.0 %}
+#      SET_PIN PIN=fan1 VALUE=255
+#    {% else %}
+#      SET_PIN PIN=fan1 VALUE=0
+#    {% endif %}
+#    {% if params.S|int > 0 %}
+#      SET_TEMPERATURE_FAN_TARGET TEMPERATURE_FAN=chamber_fan TARGET={params.S|default(35)}
+#    {% else %}
+#      SET_TEMPERATURE_FAN_TARGET TEMPERATURE_FAN=chamber_fan TARGET=35
+#      {% if params.S|int == 0 %}
+#        SET_PIN PIN=fan1 VALUE=0
+#      {% endif %}
+#    {% endif %}
+#  {% endif %}
 
 [gcode_macro M900]
 gcode:
@@ -322,13 +350,16 @@ gcode:
 gcode:
   {action_respond_info("wait temp start\n")}
   UPDATE_DELAYED_GCODE ID=wait_temp DURATION=1
-  M106 P0 S255
+  M106 P0 S192 ; 75%
+  M106 P2 S102 ; 40%
 
 [gcode_macro WAIT_TEMP_END]
 gcode:
   {action_respond_info("wait temp end\n")}
   UPDATE_DELAYED_GCODE ID=wait_temp DURATION=0
   M106 P0 S0
+  M106 P1 S0
+  M106 P2 S0
 
 [gcode_macro PRINT_CALIBRATION]
 # This part of the command is replaced by the application side without passing parameters
@@ -350,35 +381,31 @@ gcode:
 gcode:
   ACCURATE_HOME_Z
 
-[gcode_macro START_PRINT]
-variable_prepare: 0
-gcode:
-  WAIT_TEMP_END
-  CLEAR_PAUSE
-  {% set g28_extruder_temp = printer.custom_macro.g28_ext_temp %}
-  {% set bed_temp = printer.custom_macro.default_bed_temp %}
-  {% set extruder_temp = printer.custom_macro.default_extruder_temp %}
-
-  {% if 'BED_TEMP' in params|upper and (params.BED_TEMP|float) %}
-    {% set bed_temp = params.BED_TEMP %}
-  {% endif %}
-
-  {% if 'EXTRUDER_TEMP' in params|upper and (params.EXTRUDER_TEMP|float) %}
-    {% set extruder_temp = params.EXTRUDER_TEMP %}
-  {% endif %}
-
-  {% if printer['gcode_macro START_PRINT'].prepare|int == 0 %}
-    {action_respond_info("not prepare.\n")}
-    PRINT_PREPARE_CLEAR
-    CX_ROUGH_G28 EXTRUDER_TEMP={extruder_temp} BED_TEMP={bed_temp}
-    CX_NOZZLE_CLEAR
-    ACCURATE_G28
-    CX_PRINT_LEVELING_CALIBRATION
-  {% else %}
-    PRINT_PREPARE_CLEAR
-  {% endif %}
-
-  CX_PRINT_DRAW_ONE_LINE
+#[gcode_macro START_PRINT]
+#variable_prepare: 0
+#gcode:
+#  WAIT_TEMP_END
+#  CLEAR_PAUSE
+#  {% set g28_extruder_temp = printer.custom_macro.g28_ext_temp %}
+#  {% set bed_temp = printer.custom_macro.default_bed_temp %}
+#  {% set extruder_temp = printer.custom_macro.default_extruder_temp %}
+#  {% if 'BED_TEMP' in params|upper and (params.BED_TEMP|float) %}
+#    {% set bed_temp = params.BED_TEMP %}
+#  {% endif %}
+#  {% if 'EXTRUDER_TEMP' in params|upper and (params.EXTRUDER_TEMP|float) %}
+#    {% set extruder_temp = params.EXTRUDER_TEMP %}
+#  {% endif %}
+#  {% if printer['gcode_macro START_PRINT'].prepare|int == 0 %}
+#    {action_respond_info("not prepare.\n")}
+#    PRINT_PREPARE_CLEAR
+#    CX_ROUGH_G28 EXTRUDER_TEMP={extruder_temp} BED_TEMP={bed_temp}
+#    CX_NOZZLE_CLEAR
+#    ACCURATE_G28
+#    CX_PRINT_LEVELING_CALIBRATION
+#  {% else %}
+#    PRINT_PREPARE_CLEAR
+#  {% endif %}
+#  CX_PRINT_DRAW_ONE_LINE
 
 
 [gcode_macro PRINT_PREPARED]
@@ -452,10 +479,10 @@ gcode:
   M220 S100
   SET_VELOCITY_LIMIT ACCEL=5000 ACCEL_TO_DECEL=2500
   TURN_OFF_HEATERS
-  END_PRINT_POINT
-  WAIT_TEMP_START
   M107 P1
   M107 P2
+  END_PRINT_POINT
+  WAIT_TEMP_START
   M84
 
 [gcode_macro FIRST_FLOOR_PAUSE]
@@ -506,7 +533,6 @@ gcode:
 [gcode_macro FIRST_FLOOR_RESUME]
 description: Resume the first floor print
 gcode:
-  { action_respond_info("...FIRST_FLOOR_RESUME") } # tmp
   RESTORE_E_CURRENT
   {% if printer['gcode_macro PRINTER_PARAM'].fan2_speed > 0 %}
     # {% set fspeed = printer['gcode_macro PRINTER_PARAM'].fan2_speed %}
@@ -613,7 +639,6 @@ gcode:
 description: Resume the actual running print
 rename_existing: RESUME_BASE
 gcode:
-  { action_respond_info("...RESUME") } # tmp
   RESTORE_E_CURRENT
   {% if printer['gcode_macro PRINTER_PARAM'].hotend_temp|int != 0 %}
     {% if printer['gcode_macro PRINTER_PARAM'].hotend_temp|int > printer.extruder.temperature %}
