--- a/printer.cfg
+++ b/printer.cfg
@@ -8,6 +8,8 @@
 #             version: CR-K1-MAX-LEVELING-V1.0.0
 # mcu: chip: GD32F303RET6
 #      version: CR4CU220812S12
+#
+# K1 pulley replacement: https://www.reddit.com/r/crealityk1/comments/1albw79/creality_k1_pulley_replacement_to_reduce_vfa/
 
 [virtual_pins]
 [include sensorless.cfg]
@@ -92,8 +94,8 @@ max_temp: 125
 step_pin: PC2
 dir_pin: !PB9
 enable_pin: !PC3
-microsteps: 32
-rotation_distance: 72
+microsteps: 128
+rotation_distance: 40
 endstop_pin: tmc2209_stepper_x:virtual_endstop
 position_endstop: 229
 position_min: -5
@@ -103,8 +105,8 @@ homing_retract_dist:0
 
 [tmc2209 stepper_x]
 uart_pin:PA9
-interpolate: True
-run_current:1.5
+interpolate: False
+run_current:1.2
 hold_current:1.0
 sense_resistor: 0.100
 stealthchop_threshold: 0
@@ -116,7 +118,7 @@ diag_pin: ^PB12
 # driver_TOFF: 1
 # driver_HEND: 0
 # driver_HSTRT: 7
-driver_SGTHRS: 65
+driver_SGTHRS: 110
 
 [stepper_y]
 step_pin: PB8
