--- a/printer.cfg
+++ b/printer.cfg
@@ -124,8 +124,8 @@ driver_SGTHRS: 110
 step_pin: PB8
 dir_pin: !PB7
 enable_pin: !PC3
-microsteps: 32
-rotation_distance: 72
+microsteps: 128
+rotation_distance: 40
 endstop_pin: tmc2209_stepper_y:virtual_endstop
 position_endstop: -0.5
 position_min: -0.5
@@ -135,8 +135,8 @@ homing_retract_dist:0
 
 [tmc2209 stepper_y]
 uart_pin:PA10
-interpolate: True
-run_current:1.5
+interpolate: False
+run_current:1.2
 hold_current:1.0
 sense_resistor: 0.100
 stealthchop_threshold: 0
@@ -148,7 +148,7 @@ diag_pin: ^PB13
 # driver_TOFF: 1
 # driver_HEND: 0
 # driver_HSTRT: 7
-driver_SGTHRS: 65
+driver_SGTHRS: 110
 
 [stepper_z]
 step_pin: PB6
